Fixing XHTML errors (ab must become span, annoyingly) and fixing up the display of people (hacking it, sadly, so we just wrap the list in a p)

--- a/site/css/wea.css
+++ b/site/css/wea.css
@@ -1401,6 +1401,7 @@ div.expandable.closed span.mi{
     margin-top:.3rem;
     font-style:italic;
     opacity:0.85;
+    display:block;
 }
 
 
